--- a/djvideo/templates/base.html
+++ b/djvideo/templates/base.html
@@ -50,9 +50,10 @@
         {% endfor %}
       {% endif %}
 
-      {% block content %}
-        <p>Use this document as a way to quick start any new project.</p>
-      {% endblock content %}
+      <div class="max-w-7xl mx-auto px-2 py-5 sm:px-4 lg:px-8">
+        {% block content %}
+        {% endblock content %}
+      </div>
 
     </div> <!-- /container -->
 
